--- a/index (4).html
+++ b/index (4).html
@@ -299,7 +299,7 @@
   <section id="home">
     <h1>🌸 Welcome My   Creative Portfolio 🌸</h1>
     <div class="profile-frame">
-      <img src="/t/20251028_203556.jpg" alt="Betty Bargaso" />
+      <img src="20251028_203556.jpg" alt="Betty Bargaso" />
     </div>
     <p class="saying">✨ “Welcome to my digital universe where creativity meets code.” ✨</p>
     <p>I'm Betty Salibio Bargaso a passionate graduate of Bachelor of Science in Information Technology. Who believes that  technology can shape the future beautifully. I create, design, and develop with purpose combining
@@ -338,11 +338,11 @@
   <section id="output">
     <h1>My Projects</h1>
     <div class="projects">
-      <img src="/o/20251028_185030.jpg" alt="Project 1" />
+      <img src="20251028_185030.jpg" alt="Project 1" />
          T-Shirt LayOut Editor 
-      <img src="/r/20251028_185649.jpg" alt="Project 2" />
+      <img src="20251028_185649.jpg" alt="Project 2" />
       Milktea Product Editor
-      <img src="/v/20251006_141853.jpg" alt="Project 3" />
+      <img src="20251006_141853.jpg" alt="Project 3" />
       HTML code Editor
     </div>
     <div class="sample-output">
